--- a/package.json
+++ b/package.json
@@ -8,22 +8,20 @@
     "build": "run-s build:*",
     "build:css": "npm run generate:css -- --minify",
     "build:remix": "remix build",
+    "build:server": "esbuild --platform=node --format=cjs ./server.ts --outdir=build --bundle",
     "dev": "run-p dev:*",
-    "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "cross-env NODE_ENV=development binode --require ./mocks -- @remix-run/dev:remix dev",
+    "dev:server": "cross-env NODE_ENV=development node --inspect --require ./node_modules/dotenv/config --require ./mocks ./build/server.js",
+    "dev:build": "cross-env NODE_ENV=development npm run build:server -- --watch",
+    "dev:remix": "cross-env NODE_ENV=development remix watch",
+    "dev:css": "cross-env NODE_ENV=development npm run generate:css -- --watch",
+    "docker": "docker-compose up -d",
     "format": "prettier --write .",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
-    "postinstall": "remix setup node",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "setup": "prisma migrate dev && prisma db seed",
-    "start": "remix-serve build",
-    "start:mocks": "binode --require ./mocks -- @remix-run/serve:remix-serve build",
-    "test": "vitest",
-    "test:e2e:dev": "start-server-and-test dev http://localhost:3000 \"cypress open\"",
-    "pretest:e2e:run": "npm run build",
-    "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"cypress run\"",
-    "typecheck": "tsc -b && tsc -b cypress",
-    "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
+    "setup": "prisma generate && prisma migrate deploy && prisma db seed",
+    "start": "cross-env NODE_ENV=production node ./build/server.js",
+    "start:mocks": "cross-env NODE_ENV=production node --require ./mocks --require dotenv/config ./build/server.js",
+    "test": "vitest"
   },
   "prettier": {},
   "eslintIgnore": [
@@ -34,22 +32,29 @@
   "dependencies": {
     "@date-io/moment": "^2.13.2",
     "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11.8.2",
+    "@emotion/react": "^11.9.3",
     "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.5.1",
-    "@mui/material": "^5.5.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.6",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
-    "@prisma/client": "^3.11.1",
-    "@remix-run/react": "^1.3.3",
-    "@remix-run/serve": "^1.3.3",
+    "@prisma/client": "^3.15.0",
+    "@remix-run/express": "^1.6.3",
+    "@remix-run/react": "^1.6.3",
+    "@remix-run/serve": "^1.6.3",
     "@remix-validated-form/with-zod": "^2.0.1",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "moment": "^2.29.3",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "remix": "^1.3.3",
     "remix-validated-form": "^4.1.8",
+    "styled-components": "^5.3.5",
     "tiny-invariant": "^1.2.0",
     "zod": "^3.14.3"
   },
@@ -62,14 +67,20 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^14.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/compression": "^1.7.2",
     "@types/eslint": "^8.4.1",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.41",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "@vitejs/plugin-react": "^1.2.0",
+    "autoprefixer": "^10.4.7",
     "binode": "^1.0.5",
     "c8": "^7.11.0",
+    "dotenv": "^16.0.1",
     "cross-env": "^7.0.3",
-    "cypress": "^9.5.3",
+    "esbuild": "^0.14.43",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "happy-dom": "^2.51.0",
@@ -83,6 +94,7 @@
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
     "typescript": "^4.6.3",
+    "vite": "^2.9.10",
     "vite-tsconfig-paths": "^3.4.1",
     "vitest": "^0.8.0"
   },
